# line-parking-bot-v2

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy_ecr.sh  deploy_image.sh  main.py  pyproject.toml
agent/: Dockerfile  chatbot.py  main.py  prompt.md
data/: 臺北市公廁點位資訊.csv
foo_mcp_server/: Dockerfile  weather_mcp.py
notebook/: ai-chatbot.ipynb
parking_mcp_server/: Dockerfile  parking_mcp.py
scripts/: tf_apply_with_env.sh
terraform/: alb.tf  ecr.tf  ecs.tf  iam.tf  main.tf  output.tf  secrets.tf  variables.tf  vpc.tf
utils/: utils.py
